# bookmarks-project

./: .gitignore  package.json  pytest.ini  run_tests.sh  server.js
.specify/memory/: constitution.md
backend/: bookmarkParser.py  main.py  pyproject.toml
frontend/: astro.config.mjs  package.json
frontend/src/components/: BookmarkGrid.astro  FileUploader.astro  FileUploaderIsland.tsx  Grid.astro  GridIsland.tsx  HomeIsland.tsx  Welcome.astro
frontend/src/pages/: home.astro  index.astro
frontend/src/stores/: bookmarks.tsx
multipart/: __init__.py
specs/: hello-world-app.md
specs/001-hello-world-app/: plan.md  tasks.md
src/: index.ts
src/components/: BookmarkGrid.astro  FileUploader.astro  FileUploaderIsland.tsx
src/pages/: index.astro
tests/: test_main.py
tests/integration/: index.test.ts
tests/test_data/: bookmarks-1.html
tests/unit/: coverage.md  header.test.ts  index.test.ts
