[project]                                                                                                                                                                    
                                                                                                                                                                             
name = "backend"                                                                                                                                                             
                                                                                                                                                                             
version = "0.1.0"                                                                                                                                                            
                                                                                                                                                                             
description = "FastAPI backend for file upload service"                                                                                                                      
                                                                                                                                                                             
readme = "README.md"                                                                                                                                                         
                                                                                                                                                                             
requires-python = ">=3.11"                                                                                                                                                   
                                                                                                                                                                             
license = { text = "MIT" }                                                                                                                                                   
                                                                                                                                                                             
authors = [                                                                                                                                                                  
                                                                                                                                                                             
    { name = "Your Name", email = "you@example.com" }                                                                                                                        
                                                                                                                                                                             
]                                                                                                                                                                            
                                                                                                                                                                             
dependencies = [                                                                                                                                                             
                                                                                                                                                                             
    "fastapi==0.111.0",                                                                                                                                                      
                                                                                                                                                                             
    "pydantic==2.7.4",                                                                                                                                                       
                                                                                                                                                                             
    "uvicorn[standard]==0.30.1"                                                                                                                                              
                                                                                                                                                                             
]                                                                                                                                                                            
                                                                                                                                                                             
                                                                                                                                                                             
                                                                                                                                                                             
[build-system]                                                                                                                                                               
                                                                                                                                                                             
requires = ["poetry-core>=1.0.0"]                                                                                                                                            
                                                                                                                                                                             
build-backend = "poetry.core.masonry.api"                                                                                                                                    
                                                                                                                                                                             
                                                                                                                                                                             
                                                                                                                                                                             
# Optional Poetry configuration (kept for compatibility)                                                                                                                     
                                                                                                                                                                             
[tool.poetry]                                                                                                                                                                
                                                                                                                                                                             
name = "backend"                                                                                                                                                             
                                                                                                                                                                             
version = "0.1.0"                                                                                                                                                            
                                                                                                                                                                             
description = "FastAPI backend for file upload service"                                                                                                                      
                                                                                                                                                                             
authors = ["Your Name <you@example.com>"]                                                                                                                                    
                                                                                                                                                                             
readme = "README.md"                                                                                                                                                         
                                                                                                                                                                             
license = "MIT"                                                                                                                                                              
                                                                                                                                                                             
                                                                                                                                                                             
                                                                                                                                                                             
[tool.poetry.dependencies]                                                                                                                                                   
                                                                                                                                                                             
python = "^3.11"                                                                                                                                                             
                                                                                                                                                                             
fastapi = "==0.111.0"                                                                                                                                                        
                                                                                                                                                                             
pydantic = "==2.7.4"                                                                                                                                                         
                                                                                                                                                                             
uvicorn = { version = "==0.30.1", extras = ["standard"] }                                                                                                                    
